--- a/função anonima/index.html
+++ b/função anonima/index.html
@@ -68,6 +68,8 @@
         var a = Math.round((texto.length)/2)
         document.write("<br>")
         document.write(texto.substr(a,(texto.length)))
+        document.write('<br>')
+        document.write(texto.replace('',"fhsoal"))
     </script>
 </body>
 </html>
